--- a/packages/wireframe/package.json
+++ b/packages/wireframe/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "@quasar/extras": "^1.14.0",
@@ -15,11 +17,21 @@
     "vue-router": "^4.0.15"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.2",
     "@quasar/vite-plugin": "^1.0.10",
+    "@storybook/addon-actions": "^6.5.5",
+    "@storybook/addon-essentials": "^6.5.5",
+    "@storybook/addon-interactions": "^6.5.5",
+    "@storybook/addon-links": "^6.5.5",
+    "@storybook/builder-vite": "^0.1.35",
+    "@storybook/testing-library": "0.0.11",
+    "@storybook/vue3": "^6.5.5",
     "@vitejs/plugin-vue": "^2.3.3",
+    "babel-loader": "^8.2.5",
     "sass": "1.32.0",
     "typescript": "^4.6.4",
     "vite": "^2.9.9",
+    "vue-loader": "^16.8.3",
     "vue-tsc": "^0.34.16"
   }
 }
