--- a/packages/wireframe/package.json
+++ b/packages/wireframe/package.json
@@ -19,19 +19,20 @@
   "devDependencies": {
     "@babel/core": "^7.18.2",
     "@quasar/vite-plugin": "^1.0.10",
-    "@storybook/addon-actions": "^6.5.5",
-    "@storybook/addon-essentials": "^6.5.5",
-    "@storybook/addon-interactions": "^6.5.5",
-    "@storybook/addon-links": "^6.5.5",
+    "@storybook/addon-actions": "^6.5.6",
+    "@storybook/addon-essentials": "^6.5.6",
+    "@storybook/addon-interactions": "^6.5.6",
+    "@storybook/addon-links": "^6.5.6",
     "@storybook/builder-vite": "^0.1.35",
     "@storybook/testing-library": "0.0.11",
-    "@storybook/vue3": "^6.5.5",
+    "@storybook/vue3": "^6.5.6",
     "@vitejs/plugin-vue": "^2.3.3",
     "babel-loader": "^8.2.5",
     "sass": "1.32.0",
     "typescript": "^4.6.4",
     "vite": "^2.9.9",
     "vue-loader": "^16.8.3",
-    "vue-tsc": "^0.34.16"
+    "vue-tsc": "^0.34.16",
+    "@storybook/addon-notes": "~5.3.21"
   }
 }
