--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -32,6 +32,8 @@
     "typescript": "^4.6.4",
     "vite": "^2.9.9",
     "vue-loader": "^16.8.3",
-    "vue-tsc": "^0.34.16"
+    "vue-tsc": "^0.34.16",
+    "@storybook/addon-notes": "~5.3.21",
+    "rollup-plugin-polyfill-node": "~0.9.0"
   }
 }
