--- a/packages/wireframe/tsconfig.json
+++ b/packages/wireframe/tsconfig.json
@@ -12,8 +12,8 @@
     "esModuleInterop": true,
     "lib": ["esnext", "dom"],
     "skipLibCheck": true,
-    "types": ["vue/ref-macros"],
-    "noImplicitAny": false
+    "noImplicitAny": false,
+    "types": ["vue/ref-macros"]
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
   "references": [{ "path": "./tsconfig.node.json" }]
