--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -7,7 +7,10 @@
   "private": true,
   "scripts": {
     "dev": "quasar dev",
-    "test": "echo \"No test specified\" && exit 0"
+    "build": "quasar build",
+    "test": "echo \"No test specified\" && exit 0",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -19,12 +22,25 @@
     "vue-router": "^4.0.0"
   },
   "devDependencies": {
-    "@types/node": "^12.20.21",
+    "@babel/core": "^7.18.2",
     "@intlify/vite-plugin-vue-i18n": "^3.3.1",
     "@quasar/app-vite": "^1.0.0",
+    "@storybook/addon-actions": "^6.5.7",
+    "@storybook/addon-essentials": "^6.5.7",
+    "@storybook/addon-interactions": "^6.5.7",
+    "@storybook/addon-links": "^6.5.7",
+    "@storybook/addon-notes": "^5.3.21",
+    "@storybook/builder-vite": "^0.1.36",
+    "@storybook/testing-library": "0.0.11",
+    "@storybook/vue3": "^6.5.7",
+    "@types/node": "^12.20.21",
+    "@vitejs/plugin-vue": "^2.3.3",
     "autoprefixer": "^10.4.2",
+    "babel-loader": "^8.2.5",
+    "sass": "^1.32.12",
     "typescript": "^4.5.4",
-    "@vue/runtime-core": "~3.2.36"
+    "vite": "^2.9.9",
+    "vue-loader": "^16.8.3"
   },
   "engines": {
     "node": "^18 || ^16 || ^14.19",
