--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -14,7 +14,6 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "vue-i18n": "^9.0.0",
     "pinia": "^2.0.11",
     "@quasar/extras": "^1.0.0",
     "quasar": "^2.6.0",
@@ -34,12 +33,14 @@
     "@storybook/testing-library": "0.0.11",
     "@storybook/vue3": "^6.5.7",
     "@types/node": "^12.20.21",
+    "@types/react": "file:stub/types__react",
     "@vitejs/plugin-vue": "^2.3.3",
     "autoprefixer": "^10.4.2",
     "babel-loader": "^8.2.5",
     "sass": "^1.32.12",
     "typescript": "^4.5.4",
     "vite": "^2.9.9",
+    "vue-i18n": "^9.1.10",
     "vue-loader": "^16.8.3"
   },
   "engines": {
