--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -10,9 +10,11 @@
     "build": "quasar build",
     "test": "echo \"No test specified\" && exit 0",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "renew": "npm i -S axios pinia @quasar/extras quasar vue vue-router",
+    "postrenew": "npm i -D @babel/core @intlify/vite-plugin-vue-i18n @quasar/app-vite @storybook/addon-actions @storybook/addon-essentials @storybook/addon-interactions @storybook/addon-links @storybook/addon-notes @storybook/builder-vite @storybook/testing-library @storybook/vue3 @types/node @types/react@file:stub/types__react @vitejs/plugin-vue autoprefixer babel-loader sass@1.32.12 typescript vue-i18n vue-loader"
   },
-  "dependencies": {
+  "_dependencies": {
     "axios": "^0.21.1",
     "pinia": "^2.0.11",
     "@quasar/extras": "^1.0.0",
@@ -20,7 +22,7 @@
     "vue": "^3.0.0",
     "vue-router": "^4.0.0"
   },
-  "devDependencies": {
+  "_devDependencies": {
     "@babel/core": "^7.18.2",
     "@intlify/vite-plugin-vue-i18n": "^3.3.1",
     "@quasar/app-vite": "^1.0.0",
@@ -37,7 +39,7 @@
     "@vitejs/plugin-vue": "^2.3.3",
     "autoprefixer": "^10.4.2",
     "babel-loader": "^8.2.5",
-    "sass": "^1.32.12",
+    "sass": "1.32.12",
     "typescript": "^4.5.4",
     "vite": "^2.9.9",
     "vue-i18n": "^9.1.10",
@@ -47,5 +49,35 @@
     "node": "^18 || ^16 || ^14.19",
     "npm": ">= 6.13.4",
     "yarn": ">= 1.21.1"
+  },
+  "dependencies": {
+    "@quasar/extras": "^1.14.0",
+    "axios": "^0.27.2",
+    "pinia": "^2.0.14",
+    "quasar": "^2.7.1",
+    "vue": "^3.2.37",
+    "vue-router": "^4.0.15"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.18.2",
+    "@intlify/vite-plugin-vue-i18n": "^3.4.0",
+    "@quasar/app-vite": "^1.0.1",
+    "@storybook/addon-actions": "^6.5.7",
+    "@storybook/addon-essentials": "^6.5.7",
+    "@storybook/addon-interactions": "^6.5.7",
+    "@storybook/addon-links": "^6.5.7",
+    "@storybook/addon-notes": "^5.3.21",
+    "@storybook/builder-vite": "^0.1.36",
+    "@storybook/testing-library": "0.0.11",
+    "@storybook/vue3": "^6.5.7",
+    "@types/node": "^17.0.41",
+    "@types/react": "file:stub/types__react",
+    "@vitejs/plugin-vue": "^2.3.3",
+    "autoprefixer": "^10.4.7",
+    "babel-loader": "^8.2.5",
+    "sass": "^1.32.12",
+    "typescript": "^4.7.3",
+    "vue-i18n": "^9.1.10",
+    "vue-loader": "^17.0.0"
   }
 }
