--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -12,7 +12,7 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "renew": "npm i -S axios pinia @quasar/extras quasar vue vue-router",
-    "postrenew": "npm i -D @babel/core @intlify/vite-plugin-vue-i18n @quasar/app-vite @storybook/addon-actions @storybook/addon-essentials @storybook/addon-interactions @storybook/addon-links @storybook/addon-notes @storybook/builder-vite @storybook/testing-library @storybook/vue3 @types/node @types/react@file:stub/types__react @vitejs/plugin-vue autoprefixer babel-loader sass@1.32.12 typescript vue-i18n vue-loader"
+    "postrenew": "npm i -D @babel/core @intlify/vite-plugin-vue-i18n @quasar/app-vite @storybook/addon-actions @storybook/addon-essentials @storybook/addon-interactions @storybook/addon-links @storybook/addon-notes @storybook/builder-vite @storybook/testing-library @storybook/vue3 @types/node @types/react@file:stub/types__react @vitejs/plugin-vue autoprefixer babel-loader sass@1.32.12 typescript vite vue-i18n vue-loader"
   },
   "_dependencies": {
     "axios": "^0.21.1",
@@ -77,6 +77,7 @@
     "babel-loader": "^8.2.5",
     "sass": "^1.32.12",
     "typescript": "^4.7.3",
+    "vite": "^2.9.10",
     "vue-i18n": "^9.1.10",
     "vue-loader": "^17.0.0"
   }
