--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -76,6 +76,7 @@
     "autoprefixer": "^10.4.7",
     "babel-loader": "^8.2.5",
     "sass": "^1.32.12",
+    "tailwindcss": "^3.1.0",
     "typescript": "^4.7.3",
     "vite": "^2.9.10",
     "vue-i18n": "^9.1.10",
