--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -80,6 +80,7 @@
     "typescript": "^4.7.3",
     "vite": "^2.9.10",
     "vue-i18n": "^9.1.10",
-    "vue-loader": "^17.0.0"
+    "vue-loader": "^17.0.0",
+    "vue-virtual-scroll-grid": "^1.7.0"
   }
 }
