--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "build/index.js",
   "scripts": {
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "start": "ts-node src/index.ts"
   },
   "author": "",
   "license": "ISC",
@@ -12,5 +13,12 @@
     "@types/node": "^17.0.35",
     "typescript": "^4.6.4"
   },
-  "dependencies": {}
+  "dependencies": {
+    "axios": "^0.27.2",
+    "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "node-object-hash": "^2.3.10",
+    "sharp": "^0.30.6"
+  }
 }
