--- a/packages/datacenter/package.json
+++ b/packages/datacenter/package.json
@@ -2,7 +2,7 @@
   "name": "nft-market-datacenter",
   "version": "0.0.1",
   "description": "",
-  "main": "build/index.js",
+  "main": "src/index.ts",
   "scripts": {
     "tsc": "tsc"
   },
@@ -12,5 +12,5 @@
     "@types/node": "^17.0.35",
     "typescript": "^4.6.4"
   },
-  "dependencies": {}
+  "dependencies": {"mingo":"~6.0.6","node-object-hash":"~2.3.10"}
 }
