--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^17.0.35",
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.4",
+    "nft-market-modules": "workspace:*",
+    "nft-market-datacenter": "workspace:*"
   },
   "dependencies": {
     "axios": "^0.27.2",
