--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -14,37 +14,6 @@
     "renew": "npm i -S axios pinia @quasar/extras quasar vue vue-router",
     "postrenew": "npm i -D @babel/core @intlify/vite-plugin-vue-i18n @quasar/app-vite @storybook/addon-actions @storybook/addon-essentials @storybook/addon-interactions @storybook/addon-links @storybook/addon-notes @storybook/builder-vite @storybook/testing-library @storybook/vue3 @types/node @types/react@file:stub/types__react @vitejs/plugin-vue autoprefixer babel-loader sass@1.32.12 typescript vite vue-i18n vue-loader"
   },
-  "_dependencies": {
-    "axios": "^0.21.1",
-    "pinia": "^2.0.11",
-    "@quasar/extras": "^1.0.0",
-    "quasar": "^2.6.0",
-    "vue": "^3.0.0",
-    "vue-router": "^4.0.0"
-  },
-  "_devDependencies": {
-    "@babel/core": "^7.18.2",
-    "@intlify/vite-plugin-vue-i18n": "^3.3.1",
-    "@quasar/app-vite": "^1.0.0",
-    "@storybook/addon-actions": "^6.5.7",
-    "@storybook/addon-essentials": "^6.5.7",
-    "@storybook/addon-interactions": "^6.5.7",
-    "@storybook/addon-links": "^6.5.7",
-    "@storybook/addon-notes": "^5.3.21",
-    "@storybook/builder-vite": "^0.1.36",
-    "@storybook/testing-library": "0.0.11",
-    "@storybook/vue3": "^6.5.7",
-    "@types/node": "^12.20.21",
-    "@types/react": "file:stub/types__react",
-    "@vitejs/plugin-vue": "^2.3.3",
-    "autoprefixer": "^10.4.2",
-    "babel-loader": "^8.2.5",
-    "sass": "1.32.12",
-    "typescript": "^4.5.4",
-    "vite": "^2.9.9",
-    "vue-i18n": "^9.1.10",
-    "vue-loader": "^16.8.3"
-  },
   "engines": {
     "node": "^18 || ^16 || ^14.19",
     "npm": ">= 6.13.4",
@@ -82,6 +51,8 @@
     "vite": "^2.9.10",
     "vue-i18n": "^9.1.10",
     "vue-loader": "^17.0.0",
-    "vue-virtual-scroll-grid": "^1.7.0"
+    "vue-virtual-scroll-grid": "^1.7.0",
+    "regenerator-runtime": "~0.13.9",
+    "@babel/preset-env": "~7.18.2"
   }
 }
