--- a/packages/wireframe/package.json
+++ b/packages/wireframe/package.json
@@ -18,25 +18,35 @@
   },
   "devDependencies": {
     "@babel/core": "^7.18.2",
+    "@babel/preset-env": "~7.18.2",
+    "@mdx-js/react": "~2.1.2",
     "@quasar/vite-plugin": "^1.0.10",
-    "@storybook/addon-actions": "^6.5.7",
-    "@storybook/addon-essentials": "^6.5.7",
-    "@storybook/addon-interactions": "^6.5.7",
-    "@storybook/addon-links": "^6.5.7",
+    "@storybook/addon-actions": "^6.5.9",
+    "@storybook/addon-backgrounds": "^6.5.9",
+    "@storybook/addon-docs": "~6.5.9",
+    "@storybook/addon-essentials": "^6.5.9",
+    "@storybook/addon-interactions": "^6.5.9",
+    "@storybook/addon-links": "^6.5.9",
+    "@storybook/addon-measure": "^6.5.9",
+    "@storybook/addon-notes": "~5.3.21",
+    "@storybook/addon-outline": "^6.5.9",
     "@storybook/builder-vite": "^0.1.36",
-    "@storybook/testing-library": "0.0.11",
-    "@storybook/vue3": "^6.5.7",
+    "@storybook/channel-postmessage": "^6.5.9",
+    "@storybook/channel-websocket": "^6.5.9",
+    "@storybook/client-api": "~6.5.9",
+    "@storybook/preview-web": "~6.5.9",
+    "@storybook/testing-library": "0.0.13",
+    "@storybook/vue3": "^6.5.9",
+    "@types/react": "file:stub/types__react",
     "@vitejs/plugin-vue": "^2.3.3",
     "babel-loader": "^8.2.5",
+    "react": "^18.2.0",
+    "regenerator-runtime": "~0.13.9",
+    "rollup-plugin-polyfill-node": "~0.9.0",
     "sass": "1.32.0",
     "typescript": "^4.6.4",
     "vite": "^2.9.9",
     "vue-loader": "^16.8.3",
-    "vue-tsc": "^0.34.16",
-    "@storybook/addon-notes": "~5.3.21",
-    "rollup-plugin-polyfill-node": "~0.9.0",
-    "regenerator-runtime": "~0.13.9",
-    "@babel/preset-env": "~7.18.2",
-    "@types/react": "file:stub/types__react"
+    "vue-tsc": "^0.34.16"
   }
 }
