--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -25,8 +25,7 @@
     "pinia": "^2.0.14",
     "quasar": "^2.7.1",
     "vue": "^3.2.37",
-    "vue-router": "^4.0.15",
-    "vue-virtual-scroller": "^1.0.10"
+    "vue-router": "^4.0.15"
   },
   "devDependencies": {
     "@babel/core": "^7.18.2",
@@ -51,7 +50,6 @@
     "vite": "^2.9.10",
     "vue-i18n": "^9.1.10",
     "vue-loader": "^17.0.0",
-    "vue-virtual-scroll-grid": "^1.7.0",
     "regenerator-runtime": "~0.13.9",
     "@babel/preset-env": "~7.18.2"
   }
