--- a/packages/datacenter/package.json
+++ b/packages/datacenter/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "docker": "docker-compose up -d -f ./docker/docker-compose.yaml"
   },
   "author": "",
   "license": "ISC",
@@ -12,5 +13,9 @@
     "@types/node": "^17.0.35",
     "typescript": "^4.6.4"
   },
-  "dependencies": {"mingo":"~6.0.6","node-object-hash":"~2.3.10","lru-cache":"~7.10.1"}
+  "dependencies": {
+    "mingo": "~6.0.6",
+    "node-object-hash": "~2.3.10",
+    "lru-cache": "~7.10.1"
+  }
 }
