--- a/packages/server/docker/docker-compose.yaml
+++ b/packages/server/docker/docker-compose.yaml
@@ -18,7 +18,7 @@ services:
     image: mongo-express
     restart: always
     ports:
-      - 8081:8081
+      - 8080:8081
     environment:
       ME_CONFIG_MONGODB_ADMINUSERNAME: root
       ME_CONFIG_MONGODB_ADMINPASSWORD: root
@@ -39,32 +39,32 @@ services:
     environment:
       - REDIS_HOSTS=local:redis:6379
     ports:
-      - 8088:8081
+      - 8008:8081
     depends_on:
       - redis
   postgres:
-    container_name: postgres
-    image: postgres:14.3-alpine
-    restart: always
-    environment:
-        POSTGRES_DB: postgres
-        POSTGRES_USER: root
-        POSTGRES_PASSWORD: root
-        PGDATA: /var/lib/postgresql/data
-    volumes:
-        - ../tmp/docker/postgres/db:/var/lib/postgresql/data
-    ports:
-        - "5432:5432"
+      image: postgres:14.3-alpine
+      restart: always
+      environment:
+          POSTGRES_DB: postgres
+          POSTGRES_USER: root
+          POSTGRES_PASSWORD: root
+          PGDATA: /var/lib/postgresql/data
+      volumes:
+          - ../tmp/docker/postgres/db:/var/lib/postgresql/data
+      ports:
+          - "5432:5432"
   pgadmin:
-    container_name: pgadmin
-    image: dpage/pgadmin4:latest
-    restart: always
-    environment:
-        PGADMIN_DEFAULT_EMAIL: abc@bcd.cde
-        PGADMIN_DEFAULT_PASSWORD: root
-        PGADMIN_LISTEN_PORT: 8800
-    ports:
-        - "8800:8800"
-    volumes:
-        - ../tmp/docker/postgres/admin:/var/lib/pgadmin
+      image: dpage/pgadmin4:latest
+      restart: always
+      environment:
+          PGADMIN_DEFAULT_EMAIL: root
+          PGADMIN_DEFAULT_PASSWORD: root
+          PGADMIN_LISTEN_PORT: 8800
+      ports:
+          - "8800:8800"
+      volumes:
+          - ../tmp/docker/postgres/admin:/var/lib/pgadmin
+      links:
+          - "db:pgsql-server"
           
