--- a/packages/datacenter/package.json
+++ b/packages/datacenter/package.json
@@ -17,6 +17,12 @@
   "dependencies": {
     "mingo": "~6.0.6",
     "node-object-hash": "~2.3.10",
-    "lru-cache": "~7.10.1"
+    "redis": "~4.1.0",
+    "cache-manager": "~4.0.1",
+    "cache-manager-redis-store": "~2.0.0",
+    "typeorm": "~0.3.6",
+    "reflect-metadata": "~0.1.13",
+    "pg": "~8.7.3",
+    "mongodb": "~4.7.0"
   }
 }
