--- a/packages/spec/package.json
+++ b/packages/spec/package.json
@@ -19,5 +19,9 @@
     "widdershins": "~4.0.1",
     "mdx-to-md": "~0.3.1",
     "google-spreadsheet": "~3.3.0"
+  },
+  "dependencies": {
+    "pako": "~2.0.4",
+    "js-base64": "~3.7.2"
   }
 }
