--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "@microsoft/rush": "^5.70.0",
     "lerna": "^4.0.0"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "volta": {
+    "node": "16.16.0"
+  }
 }
