--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -35,5 +35,8 @@
     "vue-tsc": "^0.34.16",
     "@storybook/addon-notes": "~5.3.21",
     "rollup-plugin-polyfill-node": "~0.9.0"
+  },
+  "volta": {
+    "node": "16.16.0"
   }
 }
