--- a/packages/chain/package.json
+++ b/packages/chain/package.json
@@ -12,5 +12,8 @@
     "@types/node": "^17.0.35",
     "typescript": "^4.6.4"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "volta": {
+    "node": "16.16.0"
+  }
 }
