--- a/packages/datacenter/package.json
+++ b/packages/datacenter/package.json
@@ -24,5 +24,8 @@
     "reflect-metadata": "~0.1.13",
     "pg": "~8.7.3",
     "mongodb": "~4.7.0"
+  },
+  "volta": {
+    "node": "16.16.0"
   }
 }
