--- a/packages/nuron/package.json
+++ b/packages/nuron/package.json
@@ -31,5 +31,8 @@
         "@vue/cli-service": "~4.5.13",
         "@vue/compiler-sfc": "^3.0.0",
         "sass-loader": "^8.0.2"
+    },
+    "volta": {
+      "node": "16.16.0"
     }
 }
