--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -22,5 +22,8 @@
     "express": "^4.18.1",
     "node-object-hash": "^2.3.10",
     "sharp": "^0.30.6"
+  },
+  "volta": {
+    "node": "16.16.0"
   }
 }
